# yn

./: .env  .gitignore  README.md  index.html  package-lock.json  package.json
scripts/: generate_icon.py
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  storage.rs
src/components/: ErrorBoundary.tsx
src/engine/: adapter.ts  index.ts  registry.ts  types.ts
src/engine/__tests__/: registry.test.ts
src/engine/adapters/: gudong.ts  hitokoto.ts  jinrishici.ts  local.ts  quotable.ts  xygeng.ts  zenquotes.ts
src/lib/: db.ts  ipc.ts
src/pages/: Fallback.tsx  FloatingPanel.tsx  MainWindow.tsx
src/pages/config/: AdvancedPage.tsx  DisplayPage.tsx  FavoritesPage.tsx  HistoryPage.tsx  SchedulePage.tsx  SourcesPage.tsx
src/stores/: configStore.ts  favoriteStore.ts  sentenceStore.ts
src/styles/: themes.css
